fix(FEC-14273): change gap between bottom bar controls (#1031)
### Description of the Changes

- per Designer request - align the bottom bar controls' gap to `8px`
instead of `12px`.
- change the padding for `time-display` component, to match the
requirement

#### Resolves FEC-14273

--- a/src/components/time-display/_time-display.scss
+++ b/src/components/time-display/_time-display.scss
@@ -3,7 +3,7 @@
   line-height: 32px;
   vertical-align: top;
   font-size: 14px;
-  padding: 0 23px;
+  padding: 0 23px 0 4px;
   font-weight: bold;
   white-space: nowrap;
   filter: drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.70));
@@ -18,7 +18,7 @@
   &.size-sm,
   &.size-xs {
     .time-display {
-      padding: 0 12px;
+      padding-right: 12px;
     }
   }
 }
