--- a/src/components/bottom-bar/_bottom-bar.scss
+++ b/src/components/bottom-bar/_bottom-bar.scss
@@ -67,7 +67,7 @@
   }
 
   .control-button-container {
-    margin: 0 6px;
+    margin: 0 4px;
   }
 }
 
@@ -77,7 +77,7 @@
       display: none;
     }
   }
-  
+
   &.size-ty {
     .controls-container {
       display: block;
